# parallel_indexing

./: CMakeLists.txt  README.md  test_indexing.py
header/: cfg.h  concurqueue.h  dcomp.h  parsing.h  text_edit.h  timer.h
src/: cfg.cpp  concurqueue.cpp  dcomp.cpp  main.cpp  parsing.cpp  text_edit.cpp
